service funcs + add posts func
